tests/expectations/compiler/field/no_space_between_literal.out
Error [EPAR0370005]: expected ';' -- found 'field'
    --> compiler-test:4:15
     |
   4 |     let f = 1 field;
     |               ^^^^^
